# cross-cancer-segmentation

./: .gitignore  LICENSE  README.md  download_data.sh
qupath-annotation/: README.md  add_annotation_objects.groovy  export_annotations_as_images.groovy  export_ground_truth_class_maps.groovy
scoring-analysis/: .gitignore  README.md  figures-for-pub.qmd
scoring-app/: .env.example  .gitignore  Dockerfile  README.md  db_tools.py  docker-compose.yml  pyproject.toml  tailwind.config.js
scoring-app/app/: main.py  models.py
scoring-app/app/static/css/: main.css
scoring-app/app/templates/: base.html.jinja
scoring-app/app/templates/fragments/: comment_field.html.jinja  model_cards.html.jinja  sample_rows.html.jinja  scoring_bar.html.jinja  scoring_button.html.jinja
scoring-app/app/templates/pages/: project.html.jinja  projects.html.jinja  sample.html.jinja
scoring-app/tests/: conftest.py  test_db_tools.py  test_models.py
segmentation-pipeline/: .gitignore  README.md  cohort_config.py  create_demo_model.py  dice_analysis.py  pyproject.toml  run_dice_pipeline.sh  segment.py
segmentation-pipeline/tests/: test_cohort_config.py  test_dice_analysis.py  test_segment.py
