[project]
name = "scoring-app"
version = "0.1.0"
description = "Web app to score segmentation model outputs side by side"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "pillow>=11.0.0",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
    "tqdm>=4.66.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "ty",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations
    "RUF", # ruff-specific
]
ignore = [
    "ANN401", # dynamically typed expressions (Any) are disallowed
    "B008",   # function call in default argument (standard FastAPI pattern for Depends/Query)
]

[tool.ruff.format]
docstring-code-format = true
